--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,14 +51,21 @@ dependencies:
   sign_button: ^2.0.6
   pull_to_refresh_flutter3: ^2.0.2
   lazy_load_scrollview: ^1.3.0
-  firebase_auth: ^4.17.4
-  cloud_firestore: ^4.15.4
-  firebase_storage: ^11.6.5
-  firebase_database: ^10.4.5
+  firebase_auth: ^4.2.4
+  firebase_auth_web: ^5.2.4
+  firebase_auth_platform_interface: ^6.11.3
+  firebase_core_platform_interface: ^4.5.2
+  firebase_storage: ^11.0.10
+  firebase_storage_web: ^3.3.19
+  firebase_storage_platform_interface: ^4.1.26
+  firebase_analytics: ^10.1.0
+  firebase_analytics_platform_interface: ^3.3.17
+  cloud_firestore: ^4.3.1
+  cloud_firestore_platform_interface: ^5.10.0
   google_sign_in: ^6.2.1
-  firebase_core: ^2.25.4
   sqflite: ^2.3.2
   shared_preferences: ^2.2.2
+  cached_network_image:
 
 dev_dependencies:
   flutter_test:
