--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   file: ^7.0.0
   sign_button: ^2.0.6
   custom_clippers: ^2.0.0
-  emoji_picker_flutter: ^2.1.0
+  grouped_list: ^5.1.2
+#  emoji_picker_flutter: ^2.1.0
   pull_to_refresh_flutter3: ^2.0.2
   lazy_load_scrollview: ^1.3.0
   firebase_auth: ^4.2.4
