--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,18 @@ dependencies:
   sign_button: ^2.0.6
   custom_clippers: ^2.0.0
   grouped_list: ^5.1.2
-#  emoji_picker_flutter: ^2.1.0
   pull_to_refresh_flutter3: ^2.0.2
+  voice_message_package: ^2.1.4
+  image_picker: ^1.0.7
+  image_cropper: ^5.0.1
+  full_screen_image: ^2.0.0
+  fullscreen_image_viewer: ^0.0.6
+  easy_image_viewer: ^1.4.1
+  chewie: ^1.7.5
+  video_player: ^2.8.3
+  record: ^5.0.4
+#  social_media_recorder: ^1.1.12
+#  emoji_picker_flutter: ^2.1.0
   lazy_load_scrollview: ^1.3.0
   firebase_auth: ^4.2.4
   firebase_auth_web: ^5.2.4
